Fixing z-index issue

--- a/frontend/components/side_panels/SiteNavHeader/_styles.scss
+++ b/frontend/components/side_panels/SiteNavHeader/_styles.scss
@@ -22,6 +22,7 @@
 
     &--open {
       background-color: $text-dark;
+      z-index: 6;
 
       .site-nav-header__org {
         border-color: $text-ultradark;
